# mysite-com

./: .gitignore  Makefile  README.md  mysite-com.cabal  site.hs
KaTeX/: KaTeXIPC.hs
blog/: 2021-01-01-Lorel-Ipsum.markdown
css/: pure-extend.css
katex-zmq-ipc/: .gitignore  README.md  main.js  package-lock.json  package.json
main/: cv.markdown  index.html  papers.markdown
pubs/: example.bib
shorts/: 2021-01-01-Example.org
templates/: archive.html  default.html  nav.html  short-list.html  shorts.html
