name:               mysite-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , pandoc
                  , pandoc-types
                  , containers
                  , aeson
                  , bytestring >=0.10
                  , text
                  , zeromq4-haskell
  other-modules:    KaTeX.KaTeXIPC
  ghc-options:      -threaded
  default-language: Haskell2010
